styles/notifications.module.css
.container {
  display: flex;
  flex-direction: column;
  background-color: #FFF4D8;
  height: 200px;
  padding: 1rem 1.5rem;
  border-radius: 25px;
  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
  gap: 1rem;
}

.title {
  font-size: 1rem;
  font-weight: 700;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.notificationsContainer {
  display: flex;
  flex-direction: column;
  height: 150px;
  overflow-y: auto;
  gap: 1rem;
}

.markAll {
  background: none;
  border: none;
  cursor: pointer;
  font-size: 0.6rem;
  text-decoration: underline;
  font-weight: 700;
}

.note {
  display: flex;
  gap: 0.75rem;
  background-color: #fff;
  border-radius: 15px;
  padding: 0.75rem 1rem;
}

.icon {
  font-size: 1.5rem;
  color: #3498db;
}

.message {
  font-size: 0.75rem;
  font-weight: 700;
  margin: 0;
  color: #000;
}

.detail {
  font-size: 0.6rem;
  font-weight: 700;
  margin: 0;
  color: #808080;
}

@media (max-width: 425px){
  .notificationsContainer {
    gap: 0.75rem;
  }
  .icon {
    font-size: 1rem;
  }
  .message {
    font-size: 0.6rem;
  }
  .detail {
    font-size: 0.5rem;
  }
}

